# owd-editor

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: app.cpp  app.hpp  compositionDialog.cpp  compositionDialog.hpp  constants.hpp  edits.cpp  edits.hpp  history.cpp  history.hpp  icons.cpp  icons.hpp  imagePanel.cpp  imagePanel.hpp  includes.hpp  main.cpp  mainFrame.cpp  mainFrame.hpp  regionPanel.cpp  regionPanel.hpp  toolbar.cpp  toolbar.hpp  wxField.cpp  wxField.hpp  wxNumberCtrl.cpp  wxNumberCtrl.hpp
